<resources>
    <string name="app_name">GitHubClient</string>
    <string name="log_in">Continue</string>
    <string name="login_hint">Login</string>
    <string name="password_hint">Password</string>
    <string name="user_name_empty">UserName can\'t be empty</string>
    <string name="password_empty">Password can\'t be empty</string>
    <string name="search_view_hint">Enter gitHub user name</string>
    <string name="user_doest_have_repo">Seems that account doesn\'t have any repos</string>
    <string name="user_dosent_exist">Seems that account doesn\'t exist</string>
    <string name="error_general">Oops, something went wrong:(</string>
    <string name="error_no_network">No network connection</string>
    <string name="see_user_repos">See users repos (%1$s)</string>
    <string name="user_name">User name: %1$s</string>
    <string name="user_login">User login: %1$s</string>
    <string name="user_email">Email: %1$s</string>
    <string name="bio">Bio: %1$s</string>
    <string name="location">Location: %1$s</string>
    <string name="public_repos">Public Repos: %1$s</string>
    <string name="public_gists">Public gists: %1$s</string>
    <string name="user_doesnt_have_public_email">User doesn\'t allow show email</string>

    <string name="welcome_messages">Hello, %1$s!</string>
    <string name="repos_by">Repos by - %1$s</string>
</resources>
