<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="sa.githubclient.screens.main.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorDefaultWhite"
        android:padding="@dimen/spacing_all_7dp">

        <android.support.v7.widget.SearchView
            android:id="@+id/search_bar"
            style="@style/SearchBarStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:iconifiedByDefault="false" />

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/spacing_all_32dp">

            <ImageView
                android:id="@+id/avatar"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:scaleType="fitCenter" />

            <TextView
                android:id="@+id/login"
                style="@style/TextViewUserDataStyle"
                android:text="@string/user_login" />
            <TextView
                android:id="@+id/user_name"
                style="@style/TextViewUserDataStyle"
                android:text="@string/user_login" />
            <TextView
                android:id="@+id/email"
                style="@style/TextViewUserDataStyle"
                android:text="@string/user_email" />
            <TextView
                android:id="@+id/bio"
                style="@style/TextViewUserDataStyle"
                android:text="@string/bio" />
            <TextView
                android:id="@+id/location"
                style="@style/TextViewUserDataStyle"
                android:text="@string/location" />
            <TextView
                android:id="@+id/public_repos"
                style="@style/TextViewUserDataStyle"
                android:text="@string/public_repos" />
            <TextView
                android:id="@+id/public_gists"
                style="@style/TextViewUserDataStyle"
                android:text="@string/public_gists" />

            <Button
                android:id="@+id/repository_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_all_32dp"
                android:drawableRight="@drawable/ic_chevron_right"
                android:text="@string/see_user_repos" />

        </LinearLayout>
    </ScrollView>

    <FrameLayout
        android:id="@+id/progressBarContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <ProgressBar
            style="?android:attr/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </FrameLayout>
</RelativeLayout>
